Fix: Footer overlapping page content for better user experience

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -3,6 +3,10 @@ body {
     font-family: Merriweather, sans-serif;
 }
 
+main {
+    margin-bottom: 10rem;
+}
+
 h1,
 h2,
 h3,
@@ -174,12 +178,12 @@ div.col-1.d-flex.align-items-center {
     padding: 0 !important;
 }
 
-.footer {
-    background-color: rgba(43, 84, 126, 0.7);
+footer {
+    background-color: rgba(89, 123, 157, 0.3);
 }
 
-.footer>i {
-    background-color: #0909FF;
+footer i {
+    color: #5679c5;
 }
 
 span.asteriskField {
@@ -200,4 +204,10 @@ img.card-img-top {
 
 footer>a {
     color: #fff;
+}
+
+div.text-center.p-3 {
+    color: #5679c5;
+    font-family: Montserrat, sans-serif;
+    font-weight: 400;
 }
